[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
js-sys = "*"
gloo = "0.7"
log = "0.4.6"
substring = "1.4.5"

[dependencies.web-sys]
version = "0.3"
features = [ "HtmlAudioElement"]